# mle-f1-tech-challenge

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_exploratory_data_analysis.ipynb  02_baseline.ipynb
src/data/: make_dataset.py
src/features/: build_features.py
src/mle_f1_tech_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: predict_model.py  train_model.py
